Bug 456950 - [GMic] Offset of layer position
Summary: [GMic] Offset of layer position
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: G'Mic for Krita (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-20 16:53 UTC by David REVOY
Modified: 2022-07-20 21:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
^ A Krita file to reproduce the offset easily (232.55 KB, application/x-krita)
2022-07-20 16:53 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2022-07-20 16:53:42 UTC
Created attachment 150775 [details]
^ A Krita file to reproduce the offset easily

Hi,
If you send to GMIC a layer larger than the canvas geometry, the rendering will likely have a big offset after applying your filter.

To reproduce:
============
1. Open the file in attachement in Krita
2. Select the Paint Layer 1, It contains 
       a.  A rectangle sized inside the canvas geometry in Mustard color, crossed. 
       b.  An invisible rectangle around in Tomato color, larger than the layer.
3. Launch Gmic, and apply a filter (eg. Artistic) of your choice, and press OK.

Result:
======
The invisible rectangle that was off canvas (Tomato color) is now visible and appears on top-left. The full layer is offset from top-left.

Expected:
========
To get the same position of the layer as when sent to GMic.

Observation:
===========
A workaround is to "select all" before sending the layer to GMic. 

Fedora 36 KDE. Mesa 
GPU: AMD ATI Radeon RX 5500/5500M / Pro 5500M
CPU: AMD Ryzen 7 3700X (16) @ 3.600GHz
VM: Kwin/X11
DE: KDE Plasma 5.24.5
Krita Version: 5.1.0-beta2 appimage (nightly, today).
Qt version compiled: 5.12.12, loaded: 5.12.12.
Comment 1 amyspark 2022-07-20 21:47:13 UTC
Git commit fa44eca03f48ffe9b51d7d65613ddcb90e787a93 by L. E. Segovia.
Committed on 20/07/2022 at 21:46.
Pushed by lsegovia into branch 'master'.

G'MIC: fix regular expression for incoming layer positioning

M  +2    -1    plugins/extensions/qmic/kis_qmic_import_tools.cpp

https://invent.kde.org/graphics/krita/commit/fa44eca03f48ffe9b51d7d65613ddcb90e787a93
Comment 2 amyspark 2022-07-20 21:47:48 UTC
Git commit 9d468b536abd45cc74c3f58f7fabd157975c7131 by L. E. Segovia.
Committed on 20/07/2022 at 21:47.
Pushed by lsegovia into branch 'krita/5.1'.

G'MIC: fix regular expression for incoming layer positioning
(cherry picked from commit fa44eca03f48ffe9b51d7d65613ddcb90e787a93)

M  +2    -1    plugins/extensions/qmic/kis_qmic_import_tools.cpp

https://invent.kde.org/graphics/krita/commit/9d468b536abd45cc74c3f58f7fabd157975c7131