G'MIC: fix regular expression for incoming layer positioning

BUG: 456950